--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,56 @@
   --fontFamily: 'Roboto Mono', monospace;
 }
 
+.waves {
+	position:relative;
+	width: 100%;
+	height: 50vh;
+	bottom: calc(591px - 100vh);
+	min-height:100px;
+	max-height:150px;
+}
+
+.parallax > use {
+	animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
+  }
+  .parallax > use:nth-child(1) {
+	animation-delay: -2s;
+	animation-duration: 7s;
+  }
+  .parallax > use:nth-child(2) {
+	animation-delay: -3s;
+	animation-duration: 10s;
+  }
+  .parallax > use:nth-child(3) {
+	animation-delay: -4s;
+	animation-duration: 13s;
+  }
+  .parallax > use:nth-child(4) {
+	animation-delay: -5s;
+	animation-duration: 20s;
+  }
+  @keyframes move-forever {
+	0% {
+	 transform: translate3d(-90px,0,0);
+	}
+	100% { 
+	  transform: translate3d(85px,0,0);
+	}
+  }
+  /*Shrinking for mobile*/
+  @media (max-width: 768px) {
+	.waves {
+	  height:40px;
+	  min-height:40px;
+	}
+	.content {
+	  height:30vh;
+	}
+	h1 {
+	  font-size:24px;
+	}
+  }
+
 .dark-mode {
   --bg: #111;
   --fg: #fff;
@@ -28,7 +78,7 @@
 }
 
 body {
-	background-color: var(--bg);
+	background-color: rgb(50, 51, 55);
 	margin: 0;
 
 }
@@ -72,9 +122,8 @@ body {
 
 .container {
 	width: 100%;
-	height: 100vh;
 	margin: auto;
-    padding-top: 15vh;
+    padding-top: 5vh;
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
@@ -85,7 +134,7 @@ body {
 #username {
 	padding: 0 0.5em;
 	color: var(--bg);
-	background-color: var(--fg);
+	background-color: rgb(226, 183, 20);
 	border-radius: 2em;
 	cursor: pointer;
 }
